# mindbox-sdk

./: CHANGELOG.md  README.md  deploy.sh  pyproject.toml  requirements.txt  setup.py
mindbox/: client.py  exceptions.py  utils.py
mindbox/services/: base.py  operations.py
mindbox/types/: operations.py
tests/: test_service.py
