[tool.poetry]
name = "mindbox-sdk"
version = "1.0.0"
description = ""
authors = ["Kinder <k1ndermail@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
